--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -2,7 +2,7 @@
   background: #eceff1;
   width: 1100px;
   margin: 0 auto;
-  height: auto;
+  height: 3500px;
   min-height: 755px;
   display: flex;
   flex-flow: row wrap;
