--- a/src/components/Team2/Team2.css
+++ b/src/components/Team2/Team2.css
@@ -1,7 +1,7 @@
-.card {
+.selected {
   background: #fff;
   border-radius: 2px;
-  height: 210px;
+  height: 150px;
   margin: 1rem;
   position: relative;
   width: 170px;
@@ -9,18 +9,18 @@
   text-align: left;
 }
 
-.card > .img-container {
+.selected > .img-container2 {
   height: 100%;
   overflow: hidden;
   text-align: center;
-  background: rgb(253, 253, 253);
+  background: rgb(245, 121, 105);
 }
 
-.card > .img-container > img {
+.selected > .img-container2 > img {
   width: 110%;
 }
 
-.card:hover {
+.selected:hover {
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1);
